# aicrate

./: .gitignore  .gitmodules  README.md  pyproject.toml  pyproject.toml.in  tox.ini
.github/workflows/: release.yml
agents/: obra
agents/agency/: engineering  product  project-management  testing
aicrate/: aicrate  aicrate.yml  cli.py  engine.py  logger.py  main.py  model.py
aicrate/cli/: cli.py  run.py
aicrate/commands/: build.py  consts.py  list.py  pull.py  push.py  run.py  stop.py
aicrate/commands/runoptions/: config.py  engine.py  quadlet.py
aicrate/common/: command.py  ds.py  file.py
aicrate/engine/: git.py  podman.py  tar.py
aicrate/systemd/: quadlet.py
claudebox/: claude.py  claudebox  claudebox.conf.yml  cli.py  engine.py  logger.py  main.py
claudebox/common/: command.py
claudebox/systemd/: quadlet.py
containers/: Containerfile
containers/files/: .bashrc
containers/files/systemd/: unpack-agents.service  unpack-agents.sh  unpack-skills.service  unpack-skills.sh
examples/: README.md  aicrate.yml
mcp-server/: testing-farm-mcp
scripts/: package.sh  version.sh
scripts/tools/: build.sh  common.sh  push.sh
skills/: anthropic  juanje  mkemel  obra
skills/aicrate/git-vcs-wiki/: Makefile  README.md
skills/aicrate/git-vcs-wiki/git-vcs-wiki/: SKILL.md
skills/aicrate/git-vcs-wiki/git-vcs-wiki/scripts/: common.py  fetch_issues.py  requirements.txt  setup.sh
skills/aicrate/git-vcs-wiki/tests/: requirements.txt  test_fetch_issues.py
systemd/: claude-box-runner.container  claude-box-runner.pod
tools/: aicrate-builder  aicrate-runner  claude-box-builder  claude-box-runner
