[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "assets*", "scripts*"]

[tool.setuptools]
license-files = ["LICENSE"]
script-files = ["aicrate/aicrate"]

[project]
name="aicrate"
version="0.1.0"
description="Python tool for setting up isolated AI environments"
readme="README.md"
authors=[
    { name = "Michael Engel", email = "mengel@redhat.com" },
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords=['AI', 'claude', 'AI skills', 'AI agents', 'MCP server', 'Python']
requires-python='>=3.9'
dependencies=[
    "tabulate~=0.10.0",
]

[project.optional-dependencies]
dev = [
    "black~=25.1.0",
    "isort~=6.0.1",
]

[project.urls]
Homepage = "https://github.com/engelmi/aicrate"
Documentation = "https://github.com/engelmi/aicrate"
Repository = "https://github.com/engelmi/aicrate"
Issues = "https://github.com/engelmi/aicrate"


[tool.flake8]
max-line-length = 120
exclude = ["venv", ".venv"]
ignore = ["F401"]

[tool.mypy]
python_version = 3.9
